--- a/Medal/Medal.csproj
+++ b/Medal/Medal.csproj
@@ -25,9 +25,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.8" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.8" />
       <PackageReference Include="OpenShock.Desktop.ModuleBase" Version="1.0.0" />
       <PackageReference Include="MudBlazor" Version="8.9.0" />
+      <PackageReference Include="System.Reactive" Version="6.0.1" />
     </ItemGroup>
 
 </Project>
