--- a/Medal/Medal.csproj
+++ b/Medal/Medal.csproj
@@ -10,7 +10,7 @@
         <Product>Medal</Product>
 
         <AssemblyVersion>1.0.0</AssemblyVersion>
-        <Version>1.0.0-rc.1</Version>
+        <Version>1.0.0</Version>
 
         <ResourceLanguages>en</ResourceLanguages>
         <SatelliteResourceLanguages>en-US;en</SatelliteResourceLanguages>
