--- a/Medal/Medal.csproj
+++ b/Medal/Medal.csproj
@@ -27,9 +27,16 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.8" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.8" />
-      <PackageReference Include="OpenShock.Desktop.ModuleBase" Version="1.0.0" />
-      <PackageReference Include="MudBlazor" Version="8.9.0" />
+      <PackageReference Include="MudBlazor" Version="8.11.0" />
+      <PackageReference Include="OneOf" Version="3.0.271" />
+      <PackageReference Include="OpenShock.Desktop.ModuleBase" Version="1.1.0" />
+      <PackageReference Include="OpenShock.MinimalEvents" Version="0.0.1" />
       <PackageReference Include="System.Reactive" Version="6.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="medal.png" />
+      <EmbeddedResource Include="medal.png" />
     </ItemGroup>
 
 </Project>
